--- a/src/index.html
+++ b/src/index.html
@@ -2,5 +2,6 @@
     <head> <title> welcome!</title></head>
     <body>
         <h1>hello JS!</h1>
+        <script src="bundle.js"></script>
     </body>
 </html>
