--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <html>
     <head> <title> welcome!</title></head>
     <body>
-        <h1>hello Raja JS!</h1>
+        <h1>Hello Raja JS!</h1>
         <script src="bundle.js"></script>
     </body>
 </html>
