--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,17 @@
 <html>
     <head> <title> welcome!</title></head>
     <body>
-        <h1>Hello Raja JS!</h1>
+        <h1>Users</h1>
+        <table>
+            <thead>
+                <th>&nbsp;</th>
+                <th>id</th>
+                <th>FirstName</th>
+                <th>Last Name</th>
+                <th>Email</th>
+            </thead>
+            <tbody id="users"></tbody>
+        </table>
         <script src="bundle.js"></script>
     </body>
 </html>
